<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_device_name"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/device_info_name_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="textCapSentences"
        android:padding="0dp"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings_device_type"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/device_info_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings_device_model"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/device_info_model_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="textCapSentences"
        android:padding="0dp"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary_text" />
</LinearLayout>
