<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/file_info_name_label"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/primary_text"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/file_info_path_label"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_info_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/primary_text"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/file_info_size_label"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_info_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/primary_text"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/file_info_sender_label"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_info_sender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/primary_text"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/file_info_time_label"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/file_info_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:textColor="@color/primary_text"
            android:textIsSelectable="true"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
